# VirtualProcessingUnit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ThreadPoolEmulation.cpp  ThreadPoolEmulation.h  VPU_main.cpp  utility.h
Actions/: action_decl.cpp  action_decl.h  actions_symbols.h  interrupts.cpp  interrupts.h  process_symbols.cpp  process_symbols.h  threading.cpp  threading.h  v_engine.cpp  v_engine.h
Compiler/: action_parser.cpp  action_parser.h  variables.cpp  variables.h
CursesWrapper/: wrapper.cpp  wrapper.hpp
DebugSymbols/: DebugOutput.h  Timers.h
ExtendedSymbols/: files.cpp  files.h
Memory/: dyn_vars.cpp  dyn_vars.h  mem_arrays.cpp  mem_arrays.h  mem_structs.cpp  mem_structs.h  memory_decl.cpp  memory_decl.h  memory_symbols.cpp  memory_symbols.h
Networking/: net_hdr.h  net_symbols.cpp  net_symbols.h  netman.cpp  netman.h  testnet.cpp  unixnet.cpp  winnet.cpp
Registers/: extended_symbols.cpp  mov.cpp  native_binary.cpp  native_maths.cpp  registers_symbols.cpp  registers_symbols.h  regs_decl.h
SVASM/: CMakeLists.txt  README.md
SVASM/Assembler/: compiler.cpp  compiler.h  main.cpp  parser.cpp  parser.h  tokenizer.cpp  util.h
Samples/: init_script.vasm  sample_arrays.vasm  sample_bin_maths.vasm  sample_binary.vasm  sample_char_var.vasm  sample_compiletime_argument.vasm  sample_double_var.vasm  sample_dynvars.vasm  sample_fpr_regs.vasm  sample_fromString.vasm  sample_include1.vasm  sample_include2.vasm  sample_mem_addressing.vasm  sample_networking.vasm  sample_signed_nums.vasm  sample_signed_nums_arrays.vasm  sample_signed_nums_dynvars.vasm  sample_structs.vasm  sample_svcall_rscall.vasm  sample_thread1.vasm  sample_thread2.vasm  sample_threading.vasm  sample_threading_thread.vasm  str_lib.vasm  svasm_test.svasm
VirtualAssembler/: assembler.h  assembler_main.cpp  instructions_set.cpp
VirtualExecutableRunner/: runner.h  runner_main.cpp
lib/: pdcurses.lib
